--- a/assets/main.css
+++ b/assets/main.css
@@ -35,3 +35,15 @@ background-image: url(../assets/image/about/imageye___-_imgi_23_light_dot.jpg);
 .text__maincolor{
     color: var(--maincolor);
 }
+.portfolio .nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active{
+    color: var(--maincolor);
+}
+.portfolio .nav-link{
+    color: black;
+}
+.portfolio .nav-link{
+    border: none;
+}
+.portfolio .nav-tabs{
+    border: none;
+}
